[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "ripebustlingdisplaymanager"
version = "0.1.0"
[tool.poetry.dependencies]
pyfiglet = "^0.8.0"
python = "^3.7"
cli-ui = "^0.10.3"
[tool.poetry.dev-dependencies]
